# type-ahead

./: Cargo.toml  Dockerfile  build.rs  movie_title.txt
.github/workflows/: docker-image.yml
src/: main.rs
src/proto/: document.proto  word.proto
src/storage/: cache.rs  document.rs  mod.rs  record.rs  trie.rs  word.rs
src/storage_proto/: document.rs  mod.rs  word.rs
src/traits/: document.rs  mod.rs  word.rs
