[package]
name = "type-ahead"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.3.2"
# lazy_static = "1.4.0"
unidecode = "0.3.0"
serde = { version = "1", features = ["derive"] }
# serde_json = "1"
bincode = { version = "1.3.3" }
axum = "0.6.20"
tokio = { version = "1.33", features = ["full"] }
lru = "0.12"
lazy_static = "1"
tower-http = { version = "0.4.4", features = ["cors"] }
fst = { version = "0.4.7", features = ["levenshtein"]}
edit-distance = "2.1.0"
difference = "2.0.0"
prost = "0.12.3"


[build-dependencies]
priority-queue = "1.3.2"
unidecode = "0.3.0"
serde = { version = "1", features = ["derive"] }
bincode = { version = "1.3.3" }
lru = "0.12"
lazy_static = "1"
fst = { version = "0.4.7", features = ["levenshtein"]}
edit-distance = "2.1.0"
difference = "2.0.0"
prost = "0.12.3"
prost-build = "0.12.3"